kbuild: Skip if_tunnel.h uapi test.
This test fails due to a break from mainline tree in the CT kernel.
Specifically, we revert commit 1fe8e0f074c7 in order to be able to
include an alternative ip.h header. Since if_tunnel.h no longer includes
an ip.h header, this particular test fails. We can just skip in in this
tree.

Signed-off-by: Rory Little <rory@candelatech.com>

--- a/usr/include/Makefile
+++ b/usr/include/Makefile
@@ -30,6 +30,7 @@ no-header-test += linux/coda.h
 no-header-test += linux/cyclades.h
 no-header-test += linux/errqueue.h
 no-header-test += linux/hdlc/ioctl.h
+no-header-test += linux/if_tunnel.h
 no-header-test += linux/ivtv.h
 no-header-test += linux/matroxfb.h
 no-header-test += linux/omap3isp.h
